k8s/01-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agneta
  labels:
    role: agneta-components
---
apiVersion: v1
kind: Namespace
metadata:
  name: agneta-data
  labels:
    role: agneta-data
