k8s/03-agneta-monolith.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agneta-ingress
  namespace: agneta
spec:
  defaultBackend:
    service:
      name: agneta-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: agneta-frontend
  namespace: agneta
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: web
  selector:
    app: agneta-monolith-instance
---
apiVersion: v1
kind: Service
metadata:
  name: agneta-headless
  namespace: agneta
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 8080
      name: web
  selector:
    app: agneta-monolith-instance
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: agneta-monolith-instance
  namespace: agneta
  labels:
    app: agneta-monolith-instance
spec:
  serviceName: agneta-service
  selector:
    matchLabels:
      app: agneta-monolith-instance
  replicas: 4
  template:
    metadata:
      labels:
        app: agneta-monolith-instance
    spec:
      containers:
        - name: agneta-monolith
          imagePullPolicy: Always
          image: 07036716233/agneta-monolith:latest
          args:
            - "-crawler-update-interval=5m"
            - "-crawler-num-workers=64"
            - "-pagerank-update-interval=15m"
            - "-pagerank-num-workers=8"
            - "-link-graph-uri=postgresql://cdb-cockroachdb-public.agneta-data:26257/linkgraph?sslmode=disable"
            - "-text-indexer-uri=es://elasticsearch-master.agneta-data:9200"
            - "-partition-detection-mode=dns=agneta-headless"
          ports:
            - containerPort: 8080
              name: frontend
          resources:
            limits:
              cpu: "1"
            requests:
              cpu: 100m
